fix modal on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -191,7 +191,6 @@ cursor: pointer;
 .MuiPaper-root{
   border-radius: 24px !important;
   max-width: 375px !important;
-  min-width: 375px !important;
   overflow: hidden !important;
 }
 }
